
[package]
name = "best-path"
version = "0.1.0"
edition = "2021"
description = "Shortest/longest path algorithms, where edge weight accumulation via either a sum or a product"
homepage = "https://github.com/konrads/best-path"
repository = "https://github.com/konrads/best-path"
keywords = ["path", "graph", "floyd-warshall"]
categories = ["path", "graph", "no-std", "scale"]
license = "MIT OR Apache-2.0"

[dependencies]
codec      = { version = ">=1.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"], optional = true }
scale-info = { version = ">=0.1.0", default-features = false, features = ["derive"], optional = true }
num-traits = { version = ">=0.2.1", default-features = false, features = ["libm"] }

[features]
default = ["std"]
scale = ["codec", "scale-info"]
std = ["codec/std", "scale-info/std"]